--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"dependencies": {
 		"@tailwindcss/postcss": "4.0.0",
 		"astro": "^5.1.8",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.10",
